# exa2green-wp5

kpp_boxmodel/0-dim_box_model/kpp-2.2.1/: radm2_ch4=const.spc  submit.wlm
kpp_boxmodel/0-dim_box_model/kpp-2.2.1_with_Prace_Integrator/: kpp.kpp  submit.wlm
kpp_boxmodel/0-dim_box_model/kpp-2.2.3/: submit.wlm
kpp_boxmodel/0-dim_box_model/kppa-0.2.1/: box_model.def_Fortran_CUDA  box_model.def_Fortran_OpenMP  box_model.def_Fortran_serial  box_model.kppa_Fortran_CUDA  box_model.kppa_Fortran_OpenMP  box_model.kppa_Fortran_serial  submit_OpenMP.wlm  submit_serial.wlm
kpp_boxmodel/0-dim_box_model_Exa2Green/kpp-2.2.1_with_Prace_Integrator/: box_1.def  submit.wlm
kpp_boxmodel/0-dim_box_model_Exa2Green/kpp-2.2.4/: box_1.def
kpp_boxmodel/0-dim_box_model_Exa2Green/kppa-0.2.1/: submit_CUDA.wlm  submit_OpenMP.wlm
kpp_boxmodel/DOCS/: Testing_AtmosChemKinSolvers_EXA2green.lyx  references.bib
kpp_boxmodel/cosmo-art-new/kpp-2.2.3_files/: kpp_Initialize.f90  kpp_JacobianSP.f90  kpp_Main.f90  kpp_Util.f90
kpp_boxmodel/cosmo-art-new/kpp-2.2.3_files_with_Prace_Integrator/: kpp.kpp  kpp_Function.f90  kpp_Global.f90  kpp_Initialize.f90  kpp_Integrator.f90  kpp_Jacobian.f90  kpp_Main.f90  kpp_Monitor.f90  kpp_Precision.f90  kpp_Rates.f90  radm2_kpp_eleni_0714.spc
kpp_boxmodel/cosmo-art-new/kpp-2.2.3_files_without_NH3/: kpp_Function.f90  kpp_Global.f90  kpp_Integrator.f90  kpp_Monitor.f90  kpp_Precision.f90  kpp_Rates.f90  kpp_Util.f90  radm2_kpp_eleni_0714.def  radm2_kpp_eleni_0714.spc
kpp_boxmodel/cosmo-art-new/kppa-0.2.1_CUDA_files_with_deffix/: kppa_CUDA.kppa  kppa_CUDA_blas.cu  kppa_CUDA_blas.h  kppa_CUDA_cu_integrate.cu  kppa_CUDA_cu_integrate.h  kppa_CUDA_cu_parameters.h  kppa_CUDA_decomp.cu  kppa_CUDA_decomp.h  kppa_CUDA_driver_parameters.f90  kppa_CUDA_function.cu  kppa_CUDA_function.h  kppa_CUDA_initialize.f90  kppa_CUDA_integrate.f90  kppa_CUDA_jacobian.cu  kppa_CUDA_jacobian.h  kppa_CUDA_monitor.f90  kppa_CUDA_parameters.f90  kppa_CUDA_rates.h  kppa_CUDA_rosenbrock.cu  kppa_CUDA_solve.cu  kppa_CUDA_solve.h  radm2_kpp_eleni_0714_kppa.def
kpp_boxmodel/cosmo-art-new/kppa-0.2.1_OpenMP_files/: Makefile  kppa_OpenMP.kppa  kppa_OpenMP_driver_parameters.f90  kppa_OpenMP_integrate.f90  kppa_OpenMP_monitor.f90  kppa_OpenMP_parameters.f90  kppa_OpenMP_rosenbrock.f90  kppa_OpenMP_sparse.f90
kpp_boxmodel/daint_output_data_files/: kpp_vs_kppa.ipynb
kpp_boxmodel/kpp-2.2.1/: Makefile.m
kpp_boxmodel/kpp-2.2.1_with_Prace_Integrator/: CHANGELOG
kpp_boxmodel/kpp-2.2.3/: Makefile.defs
kpp_boxmodel/kpp-2.2.3_with_Prace_Integrator/: README
kpp_boxmodel/kpp-2.2.4/: .hg_archival.txt  Makefile
m7_box_model/: aclocal.m4  configure  target_confmake.ksh
m7_box_model/config/: mh-cray-xt3_untested  mh-linux  mh-linux-x64_ori
m7_box_model/contrib/: hdiffdiag.py
m7_box_model/run/: README.txt
m7_box_model/src/: Makefile.old  m7_box.f90  mo_filename.f90  mo_ham_nucl.f90  mo_netcdf.f90  mo_species.f90_old
m7_box_model/support/: util_reshape.c
m7_box_model/test/: compile_echam6.sh
m7_box_model/util/: fgenrc  inc2tex.py
m7_boxmodel/: config.status  echam6_base_version.txt  target_database.ksh
m7_boxmodel/config/: config.h  config.h.CRAY_XT3  mh-aix  mh-linux-ia32_ori  mh-linux-x64  mh-nec_untested_ori
m7_boxmodel/doc/: codes.6
m7_boxmodel/src/: mo_ham_kappa.f90  mo_ham_m7_species.f90
m7_boxmodel/support/: util_backtrace.c  util_buffer_pool.c  util_db_timings.c  util_sysinfo.c
m7_boxmodel/test/: mve
m7_boxmodel/util/: createMakefiles.pl  ftrace.pl
paper_enahpc14/: Conclusion.tex  Introduction.tex  Makefile  Sec1:COSMO-ART.tex  Sec1:Related.tex  Sec2:COSMO-ART.tex  Sec2:Experimental-setup.tex  Sec2:Power-measurement.tex  Sec3:Environment-setup.tex  Sec3:Evaluation.tex  Sec3:Measurement-framework.tex  Sec4:Evaluation.tex  Sec4:Experimental-results.tex  clean.sh  compile.sh  draft.bib  draft.tex  paper.bib  paper.ps  paper.tex  template.tex
paper_enahpc14/Biographies/: CV_Manuel_F_Dolz.odt  CV_Sandra_Catalan.odt
paper_enahpc14/Figs/: 11_12_blq0_figure.eps  11_12_blq0_figure.pstex_t  11_12_blq1_figure.eps  11_12_blq1_figure.pstex  11_12_blq1_figure.pstex_t  23_24_blq0_figure.pstex  23_24_blq0_figure.pstex_t  23_24_blq1_figure.eps  23_24_blq1_figure.pstex_t  24hour.eps  24hour.pstex  24hour.pstex_t  Makefile  Time_E2S_COSMO-ART.eps  plot.plt
paper_enahpc14/RebuttalLetter/: c  rebuttal.tex
trunk/m7_box_model/: Doxyfile  Makefile  README  target_echam6.info
trunk/m7_boxmodel/: Makefile.in  configure.ac  target_echam6.ksh  target_functions.ksh
trunk/m7_boxmodel/config/: config.h.SX  mh-cray-xt3_untested_ori  mh-darwin  mh-nec_untested  mh-solaris_untested
trunk/m7_boxmodel/contrib/generate-scripts/: README_MPIESM  dummy.job2  dummy.post  generate-echam.sh  generate-mpiesm.sh  job1
trunk/m7_boxmodel/include/: hamctl.inc
trunk/m7_boxmodel/run/backup_runscript_echam6-hammoz/: README.txt  backup_runscript_echam6-hammoz.sh
trunk/m7_boxmodel/run/echam6_inherited/: bb_ECHAM6.cfg  bb_run  exp.echam6run  head.squall  load_module.ksh
trunk/m7_boxmodel/run/emi_spec_examples/: emi_spec_aerocom+isoa.txt
trunk/m7_boxmodel/run/run_examples/: README.txt
trunk/m7_boxmodel/run/run_examples/run_climatologic_echam6-hammoz/: emi_spec_run_climatologic_echam6-hammoz.txt
trunk/m7_boxmodel/run/test_boxmodel/: slurm_test_boxmodel.1_630557.txt
trunk/m7_boxmodel/src/: mo_constants.f90  mo_ham_init.f90  mo_ham_m7ctl.f90  mo_ham_soa.f90  mo_ham_species.f90  mo_time_control.f90  mo_tracdef.f90  mo_util_string.f90
trunk/m7_boxmodel/support/: Makefile  util_timer.c
trunk/m7_boxmodel/test/: link.sh
trunk/m7_boxmodel/util/: prepare.py
trunk/paper_enahpc14/: Conclusion.tex  Introduction.tex  Makefile  Sec1:COSMO-ART.tex  Sec2:COSMO-ART.tex  Sec2:Experimental-setup.tex  Sec2:Power-measurement.tex  Sec3:Environment-setup.tex  Sec3:Measurement-framework.tex  Sec3:Power-measurement.tex  Sec4:Evaluation.tex  Sec4:Experimental-results.tex  Sec5:Supercomputers.tex  clean.sh  compile.sh  draft.bib  draft.tex  paper.bib  paper.ps  paper.tex  power-measurement.tex
(+516 files in other folders)
